--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"type": "module",
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.4.0",
+		"luxon": "^3.3.0",
 		"mongodb": "^5.6.0",
 		"uuid": "^9.0.0"
 	}
