--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@fortawesome/fontawesome-free": "^6.4.0",
 		"luxon": "^3.3.0",
 		"mongodb": "^5.6.0",
-		"uuid": "^9.0.0"
+		"uuid": "^9.0.0",
+		"xlsx-js-style": "^1.2.0"
 	}
 }
